2007-10-12  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (Qexplicit_name): New variable.
	(x_report_frame_params): Report it in parameter alist.
	(syms_of_frame): Intern and staticpro it.

2007-10-09  Jason Rumney  <jasonr@gnu.org>

	* w32term.c (x_set_window_size): Disable code that attempts to tell
	Lisp code about a size change before it actually happens.

2007-10-09  Richard Stallman  <rms@gnu.org>

	* xdisp.c (handle_invisible_prop): After setting up an ellipsis,
	return HANDLED_RETURN.

2007-10-06  Martin Rudalics  <rudalics@gmx.at>

	* keyboard.c (kbd_buffer_get_event): Break loop waiting for input
	when there's an unread command event.

	* frame.c (focus_follows_mouse): Moved here from frame.el to allow
	window autoselection act appropriately when leaving selected frame.
	(syms_of_frame): Initialize focus_follows_mouse.
	* frame.h (focus_follows_mouse): Extern it.
	* macterm.c (XTread_socket): When focus_follows_mouse is nil
	make SELECT_WINDOW_EVENT only if we don't leave the selected
	frame.
	* msdos.c (dos_rawgetc): Likewise.
	* w32term.c (w32_read_socket): Likewise.
	* xterm.c (handle_one_xevent): Likewise.
	* xdisp.c (syms_of_xdisp): In doc-string of
	mouse-autoselect-window mention focus-follows-mouse.

2007-10-06  Andreas Schwab  <schwab@suse.de>

	* fileio.c (Fwrite_region): Ignore EINVAL error from fsync.

2007-10-05  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (mac_load_query_font): Fix missing return value.
	[USE_CG_DRAWING] (mac_define_fringe_bitmap, mac_destroy_fringe_bitmap):
	Add BLOCK_INPUT.

2007-10-04  Juanma Barranquero  <lekktu@gmail.com>

	* image.c (syms_of_image) <image-types>: Fix typo in docstring.

2007-10-02  Richard Stallman  <rms@gnu.org>

	* xdisp.c (get_window_cursor_type): Implement documented behavior
	for cursor-in-non-selected-windows = t.

2007-10-01  Juanma Barranquero  <lekktu@gmail.com>

       * lread.c (Fload): Fix typo in docstring.

2007-09-29  Juri Linkov  <juri@jurta.org>
